crates/reap-pm-live/tests/ui/public_run_reducer_is_private.rs
use reap_pm_live::PmPublicCaptureRun;

fn borrow_raw_reducer(run: &mut PmPublicCaptureRun) {
    let _ = &mut run.pm_reducer;
}

fn main() {}
